[package]
name = "demo"
version = "0.1.0"
authors = ["yk2011 <yike19911102@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "2.0.0", features = ["openssl"]}
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix-web-actors = "2.0.0"
log = "0.4.0"
log4rs = "0.12.0"
env_logger = "0.7.1"
openssl = {version = "0.10.29", features = ["v110"]}
flatbuffers = "0.6.1"
config = "0.10.1"